--- a/math154/calculus1_increasing_decreasing_concavity.html
+++ b/math154/calculus1_increasing_decreasing_concavity.html
@@ -42,6 +42,23 @@ $(function () {
       </ul>
     </div>
 
+    <h2>Increasing and Decreasing Examples</h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#idex">Examples</button>
+      <div id="idex" class="collapse">
+        <P>For each of the functions below, find where they are increasing or decreasing and identify and local maxima and minima.
+          <ol type="A">
+            <li>\(\displaystyle f(x) = x^3 - 3x + 1\)
+            <li>\(\displaystyle g(x) = x^4 - 4x^3 + 12\)
+            <li>\(\displaystyle h(x) = 15x^{2/3} - 3x^{5/3}\)
+            </ol>
+          </div>
+
+          <h2>Example</h2>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#idex2">Example</button>
+            <div id="idex2" class="collapse">
+              <P>Identify where \(\displaystyle f(x) = e^{\sin x - x}\) is increasing and decreasing on \([-\pi, 3\pi]\).
+              </div>
+
 <h2>Convavity of Functions </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex3">Example</button>
   <div id="gex3" class="collapse">
@@ -73,6 +90,13 @@ shown on the right?<br>
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=0_1fidu5ai&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_9kk2e47w" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </div>
 
+  <h2>Example - graphical reasoning  </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exgr">Example</button>
+    <div id="exgr" class="collapse">
+      <P>Find the intervals where the function f(x) is increasing and decreasing and identify and local maxima and minima based on the graph of f'(x) below.
+        <br>
+        <img src="fprimegraph1.png" with=500>
+    </div>
 
 <h2>Example - Surge function  </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex5">Example</button>
