--- a/math154/calculus1_increasing_decreasing_concavity.html
+++ b/math154/calculus1_increasing_decreasing_concavity.html
@@ -20,7 +20,7 @@ $(function () {
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-  <body  style="width: 700px; padding-left: 1cm; padding-bottom: 10cm">
+  <body  style="width: 600px; padding-left: 1cm; padding-bottom: 10cm">
 
   <h1>Calc I Increasing/Decreasing Functions and Concavity</h1>
 
@@ -62,6 +62,14 @@ $(function () {
 <h2>Convavity of Functions </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex3">Example</button>
   <div id="gex3" class="collapse">
+
+    <P>Find where the following functions are concave up and concave down.
+      <ol type="A">
+        <li>\(\displaystyle f(x) = x^2 - 2x - 3\)
+        <li>\(\displaystyle g(x) = x^4 - 4x^3 + 12\)
+        </ol>
+
+
     <h3>Find Concavity of a Function and the Inflection Points</h3>
 <ul>
     <li><iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_u9m8aghg&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_6fe587lu" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
@@ -88,6 +96,14 @@ $(function () {
 shown on the right?<br>
 <img src="./secondderivative_graph.png" width=500><br><br>
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=0_1fidu5ai&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_9kk2e47w" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+<br><br><br>
+
+<P>Water is being poured into a “Dixie cup” (a standard cup that is smaller at the bottom
+than at the top). The height of the water in the cup is a function of the volume of
+water in the cup. The graph of this function is<br>
+<P>(a) increasing and concave up<br>
+<P>(b) increasing and concave down<br>
+<P>(c) a straight line with positive slope.<br>
   </div>
 
   <h2>Example - graphical reasoning  </h2>
@@ -123,6 +139,21 @@ shown on the right?<br>
 
     </div>
 
+<h2>Examples - True/False  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#tf">Example</button>
+  <div id="tf" class="collapse">
+    <ol type='A'>
+      <li><b>True or False:</b> If f has an inflection point at x=a, then f'(a) = 0.
+      <li><b>True or False:</b> A polynomial of degree 3 has exactly one inflection point.
+      <li><b>True or False:</b> If the graph of a function that has a second derivative is concave up on interval I, then -f is concave down on that interval.
+      </ol>
+    </div>
+
+    <h2>Examples -  </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#bf">Example</button>
+      <div id="bf" class="collapse">
+        <P>Find where \(f\) is increasing or decreasing, concave up and concave down, and identify and local maxima and minima.
+        </div>
 
 </body>
 </html>
