--- a/math154/calculus1_more_optimization.html
+++ b/math154/calculus1_more_optimization.html
@@ -85,6 +85,24 @@ $(function () {
         </details>
       </div>
 
+  <h2>Example - Trucking </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex7">Example</button>
+    <div id="gex7" class="collapse">
+      <P> A truck driving over a flat interstate at a constant speed of 50 mph gets 4 mile per gallon.
+        Assume fuel costs $1.19 per gallon. The truck loses a tenth of a mile per gallon in fuel
+        efficiency for each mile per hour increase over 50 mph. Drivers are paid $27.50 per hour in wages/benefits.
+        Fixed costs for running the truck are $11.33 per hour. A trip of 300 miles is planned.
+        What speed minimizes operating expenses?
+    </div>
+
+  <h2>Example - Screw </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex8">Example</button>
+    <div id="gex8" class="collapse">
+      <P> The efficiency of a screw is given by \(\displaystyle E(\theta) = \frac{\theta - \mu \theta^2}{\mu + \theta}\),
+        where \(\mu >0 \) is the coefficient of friction, and \(\theta \geq 0\) is the thread angle.
+        What value of \(\theta\) maximizes \(E\)?
+    </div>
+
 
 
 
