--- a/math250/DELAhome.html
+++ b/math250/DELAhome.html
@@ -29,9 +29,8 @@
 <hr>
 
 <ul>
-  <!--<li><a href="https://tyler-skorczewski-math.github.io/math250/intro_to_DE.html">Introduction to DEs</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_DE_slopefields.html">Slopefields</a>-->
-  <li><a href="https://tyler-skorczewski-math.github.io/math250/week1.html">week 1</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_to_DE.html">Introduction to DEs</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_DE_slopefields.html">Slopefields</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week2.html">week 2</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week3.html">week 3</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week4.html">week 4</a>
@@ -41,11 +40,13 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week8.html">week 8</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week9.html">week 9</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week10.html">week 10</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/week11.html">week 11</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week12.html">week 12</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week13.html">week 13</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week14.html">week 14</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math250/laplace_transforms.html">Laplace Transforms</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/starwarsexample.html">Star Wars example</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/laplace_transforms.html">Laplace transforms</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/power_series_solutions.html">power series solutions</a>
 </ul>
 
 
