--- a/math250/week12.html
+++ b/math250/week12.html
@@ -36,7 +36,6 @@
     <li> Consider the matrix \(A = \begin{bmatrix}-2 & 1 & 1 \\1 & -2 & 1\\ 1 & 1 & -2 \end{bmatrix}\). We know that \(|A - \lambda I| = \lambda(\lambda+3)^2\). Find the eigenvalues and eigenvectors of \(A\).
     <li> Show that \(e^{5t}\begin{bmatrix}2\\1\end{bmatrix}\) is a solution to \(\vec{x}' = \begin{bmatrix}4 & 2\\3 & -1 \end{bmatrix} \vec{x}\).
     <li> Use the <a href="./pplane.jar">pplane</a> software to draw a phase plane for the DE system above.
-    <li> Find the general solution to \(\vec{x}' = \begin{bmatrix}1 & -1 \\ 4 & 1\end{bmatrix}\vec{x}\).
     </ol>
  </div>
 
@@ -120,12 +119,15 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
 <img src="./house.png" width=400><br>
-<p> Consider the 2 story house above. Imagine that the furnace breaks. Heat can be exchanged between the top and bottom floors and the outside.
+<p> Consider the 2 story house above. Imagine that the furnace breaks and that the temperature outside is \(A=0\).
+  Heat can be exchanged between the top and bottom floors and the outside.
   <ol type='a'>
     <li> Explain why the system below could be a model for the temperature dynamics of each floor.
       $$T_1' = -k_{1,A}(T_1 - A) - k_{1,2} (T_1 - T_2) $$
       $$T_2' = -k_{2,A}(T_2 - A) + k_{1,2} (T_1 - T_2) $$
-    <li> Use the <a href="./pplane.jar">pplane</a> software to draw a phase plane for this system. Describe how solutions behave. Use common language.
+    <li> Use the <a href="./pplane.jar">pplane</a> software to draw a phase plane for this system for various values of the parameters.
+      Assume \(k_{1,A} = k_{2,A}\). What value should be larger \(k_{1,A}\) or \(k_{1,2}\)? Why?
+      Describe how solutions behave. Use common language.
     <li> Write the system in matrix-vector form. Label this system.
     <li> Find the eigenvalues and eigenvectors for the matrix above.
     <li> Write down the general solution.
