--- a/math154/calculus1_limits_with_infinity.html
+++ b/math154/calculus1_limits_with_infinity.html
@@ -97,7 +97,7 @@ def _(f=input_box(f,label="f(x) =  ")):
           <ol>
             <li>\(\displaystyle \lim_{x \to \infty}\frac{\sqrt{x}+2x}{x^3+1}\)<br><br>
             <li>\(\displaystyle \lim_{x \to \infty}\frac{x^{-2/3}}{x^{-1}} - \frac{x}{x^{2/3}}\)<br><br>
-            <li>\(\displaystyle \lim_{x \to 1infty}\frac{3x^3 - 5x^2 + x +1}{2x^3 - 4x}\)<br><br>
+            <li>\(\displaystyle \lim_{x \to \infty}\frac{3x^3 - 5x^2 + x +1}{2x^3 - 4x}\)<br><br>
             <li>\(\displaystyle \lim_{x \to \infty}\frac{x+1}{x+2}\)<br><br>
           </ol><br><br>
           <details>
