--- a/math154/calculus1_limits_with_infinity.html
+++ b/math154/calculus1_limits_with_infinity.html
@@ -58,7 +58,7 @@ def _(f=input_box(f,label="f(x) =  "),x0=input_box(x0,label="xmax = ")):
     <h2>Example - rational function </h2>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example</button>
       <div id="ex1" class="collapse">
-        <P>Consider the function \(\displaystyle f(x) = \frac{2x^3-1}{x^3-1}\). <br>
+        <P>Consider the function \(\displaystyle f(x) = \frac{2x^3-x}{x^3-1}\). <br>
           <div class="compute">
           <script type="text/x-sage">
 var('x')
